[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Level Tiles/Hell PlatformA-export.png" type="Texture" id=1]
[ext_resource path="res://assets/Mouse UI/Blue Orb.png" type="Texture" id=2]
[ext_resource path="res://assets/AnimatedRes/Hell Plat1 Animation.tres" type="Texture" id=3]
[ext_resource path="res://assets/Level Tiles/Pillar cropped V2-01.png" type="Texture" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Mouse UI/Red Orb.png" type="Texture" id=6]
[ext_resource path="res://assets/Level Tiles/Stalagmite cropped-01.png" type="Texture" id=7]
[ext_resource path="res://scripts/main.gd" type="Script" id=8]
[ext_resource path="res://scripts/TimeDisplay.gd" type="Script" id=9]
[ext_resource path="res://scripts/CountDown.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/Hell Theme.wav" type="AudioStream" id=11]
[ext_resource path="res://scripts/MusicPlayer.gd" type="Script" id=12]
[ext_resource path="res://assets/Sprites and sheets/Health and PickUps/HealthUI.png" type="Texture" id=13]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=14]
[ext_resource path="res://scripts/CameraM.gd" type="Script" id=15]
[ext_resource path="res://assets/I-pixel-u.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/Level Tiles/Sky Box V3-01.png" type="Texture" id=23]
[ext_resource path="res://assets/fonts/CompassGold.ttf" type="DynamicFontData" id=26]
[ext_resource path="res://assets/Sprites and sheets/Health and PickUps/Gold.png" type="Texture" id=27]
[ext_resource path="res://assets/Level Tiles/SkyTint-01.png" type="Texture" id=29]
[ext_resource path="res://scenes/UI/Mouse.tscn" type="PackedScene" id=31]

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0.00063324, 16, 0.00063324 )

[sub_resource type="TileSet" id=1]
0/name = "Hell Plat1 Animation.tres 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Hell PlatformA-export.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 8 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 26 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 20 )

[node name="Main" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ 192.0 ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 515, 0 )

[node name="BackGround" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color( 0.92, 0.92, 0.92, 1 )
position = Vector2( -320, -152 )
scale = Vector2( 5, 6.45161 )
texture = ExtResource( 23 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 292.898, 62.0695 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0 )
motion_mirroring = Vector2( 405, 0 )

[node name="Columns" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -408, -168 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( -199.54, 0, 583.54, 108 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0 )
motion_mirroring = Vector2( 320, 0 )

[node name="Stalagmites" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -392, -376 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( -199.54, 0, 680.151, 108 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 17
format = 1
tile_data = PoolIntArray( -9, 1, 0, -65527, 1, 0, 65527, 1, 0, 9, 1, 0, 131063, 1, 0, 65545, 1, 0, 196599, 1, 0, 131081, 1, 0, 262135, 1, 0, 196617, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 0 )

[node name="LevelMusic" type="AudioStreamPlayer" parent="Player"]
pause_mode = 2
stream = ExtResource( 11 )
volume_db = -8.0
script = ExtResource( 12 )

[node name="Mouse" parent="." instance=ExtResource( 31 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
script = ExtResource( 15 )

[node name="HUD" type="Control" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="Skybox" type="Sprite" parent="Camera2D/HUD"]
modulate = Color( 1, 1, 1, 0.258824 )
scale = Vector2( 10.5631, 10.0984 )
z_index = -2
texture = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Heart1" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -454, -226 )
scale = Vector2( 7, 7 )
texture = ExtResource( 13 )
hframes = 2

[node name="Heart2" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -306, -226 )
scale = Vector2( 7, 7 )
texture = ExtResource( 13 )
hframes = 2

[node name="Heart3" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -378, -226 )
scale = Vector2( 7, 7 )
texture = ExtResource( 13 )
hframes = 2

[node name="RedOrb" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -454, -176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="RedOrb2" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -406, -176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="BlueOrb" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -358, -176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="BlueOrb2" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( -310, -176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Gold" type="Sprite" parent="Camera2D"]
position = Vector2( 372, -236 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 27 )
hframes = 6

[node name="TreasureCollected" type="Label" parent="Camera2D"]
margin_left = 395.0
margin_top = -246.0
margin_right = 489.0
margin_bottom = -210.0
custom_colors/font_color = Color( 0.6, 1, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.0196078, 0.2, 1 )
custom_fonts/font = SubResource( 6 )
text = "126/126"
align = 1
valign = 1
uppercase = true

[node name="TimeLeft" type="Label" parent="Camera2D"]
margin_left = -52.0
margin_top = -266.0
margin_right = 58.0
margin_bottom = -221.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.6, 1, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.0196078, 0.2, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
uppercase = true
script = ExtResource( 9 )

[node name="GraceTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CountDown" type="Timer" parent="."]
wait_time = 50.0
autostart = true
script = ExtResource( 10 )

[node name="Hell Spiders Webbed" type="Node2D" parent="."]

[node name="Hell Spiders" type="Node2D" parent="."]

[node name="Demons" type="Node2D" parent="."]

[node name="Checkpoints" type="Node2D" parent="."]

[node name="Treasures" type="Node2D" parent="."]

[node name="TreasureCrates" type="Node2D" parent="."]

[node name="Lavas" type="Node2D" parent="."]

[node name="Spikes" type="Node2D" parent="."]

[node name="HealthItems" type="Node2D" parent="."]

[connection signal="add_to_timer" from="." to="CountDown" method="_on_Main_add_to_timer"]
[connection signal="health_changed" from="." to="Camera2D/HUD" method="_on_Main_health_changed"]
[connection signal="timeout" from="GraceTimer" to="." method="_on_GraceTimer_timeout"]
[connection signal="timeout" from="CountDown" to="CountDown" method="_on_CountDown_timeout"]
